:bug: - fix: fix incorrect styling of clear button in dark mode for select

--- a/src/components/form/select/select.scss
+++ b/src/components/form/select/select.scss
@@ -47,6 +47,7 @@
     appearance: none;
     background-color: transparent;
     border: none;
+    color: var(--typography-color-body);
     margin: 0;
     margin-inline-end: var(--spacing-h-s);
     padding: 0;
